# auditing-spatial-fairness

./: main.py  pyproject.toml
src/: functions.py
